--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <main>
-<!-- <form action="/index" method='post'> -->
-<form action="">
-    <p><label class='label' for="player1">Player 1 Name:</label><input type="text" id='player1_name'>
+<form action="/index" method='post'>
+<!-- <form action=""> -->
+    <p><label class='label' for="player1">Player 1 Name:</label><input type="text" id='player1_name' value='Player 1'>
    <label for="player1_choice"></label>
     <select name="player1_choice" id="player1_choice">
         <option value="rock">Rock</option>
@@ -12,7 +12,7 @@
     </select>
     </p>
 
-    <p><label class='label' for="player2">Player 2 Name:</label><input type="text" id='player2_name'>
+    <p><label class='label' for="player2">Player 2 Name:</label><input type="text" id='player2_name' value='Player 2'>
     <label for="player2_choice"></label>
     <select name="player2_choice" id="player2_choice">
         <option class='select' value="rock">Rock</option>
